# hyped-2026

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: CODEOWNERS
boards/stm32f767zi/: Cargo.toml  MOTOR_CONTROL_INTERFACE.md
boards/stm32f767zi/mc_logic/: Cargo.toml
boards/stm32f767zi/mc_logic/src/: lib.rs
boards/stm32f767zi/mc_logic/tests/: navigation_sim.rs
boards/stm32f767zi/src/: board_state.rs  io.rs  lib.rs  log.rs  macros.rs  sdmmc.rs  tasks.rs
boards/stm32f767zi/src/motor_control/: braking.rs  control_loop.rs  event_handling.rs  mod.rs  navigation.rs  propulsion_status.rs
boards/stm32f767zi/src/sdmmc/: logging.rs  mod.rs  read_logs.rs
boards/stm32f767zi/src/tasks/: can.rs  can_to_mqtt.rs  motor_control.rs  mqtt.rs  read_temperature_mux_board.rs  sensors.rs  state_machine.rs  status_to_mqtt.rs
boards/stm32f767zi/src/tasks/can/: board_heartbeat.rs  event_bridge.rs  event_to_can.rs  receive.rs  send.rs
boards/stm32f767zi/src/tasks/motor_control/: control.rs  receive.rs
boards/stm32f767zi/src/tasks/mqtt/: base_station_heartbeat.rs  mqtt_to_event_bus.rs  receive.rs  send.rs
boards/stm32f767zi/src/tasks/sensors/: read_accelerometer.rs  read_accelerometers_from_mux.rs  read_imd.rs  read_keyence.rs  read_lp_bms.rs  read_lp_bms_uart.rs  read_optical_flow.rs  read_temperature.rs
config/: heartbeats.yaml  localisation.yaml  pods.yaml  sensors.yaml  telemetry.yaml
lib/communications/: Cargo.toml
lib/communications/src/: actions.rs  boards.rs  bus.rs  can_id.rs  data.rs  emergency.rs  events.rs  lib.rs  message_identifier.rs  messages.rs  react.rs  state_transition.rs
lib/core/src/: config.rs  mqtt.rs  mqtt_topics.rs  types.rs
lib/io/hyped_adc/src/: adc_mux.rs  adc_mux_test.rs  lib.rs
lib/io/hyped_can/src/: lib.rs
lib/io/hyped_i2c/src/: i2c_mux.rs  lib.rs
lib/io/hyped_uart/: Cargo.toml
lib/io/hyped_uart/hyped_uart_derive/src/: lib.rs
lib/io/hyped_uart/src/: lib.rs
lib/localisation/src/: types.rs
lib/localisation/src/control/: localizer.rs
lib/localisation/src/preprocessing/: accelerometer.rs  keyence.rs
lib/motors/src/: can_open_message.rs  can_open_processor.rs
lib/sensors/: Cargo.toml
lib/sensors/src/: accelerometer.rs  imd.rs  led_driver.rs  lib.rs  low_pressure.rs  lp_bms.rs  lp_bms_uart.rs  temperature.rs
lib/state_machine/: Cargo.toml
lib/state_machine/src/: lib.rs  state.rs  state_machine.rs  states.rs
lib/state_machine/src/states/: accelerate.rs  begin_levitation.rs  brake.rs  calibrate.rs  emergency.rs  hv_active.rs  idle.rs  levitating.rs  maintenance.rs  mod.rs  precharge.rs  ready.rs  ready_for_levitation.rs  ready_for_propulsion.rs  setup_motor.rs  stop_levitation.rs  stopped.rs
telemetry/: .gitignore  Dockerfile  docker-compose.yml  entry.sh  pnpm-lock.yaml  turbo.json
