[package]
name = "hyped_sensors"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
embassy-sync = { version = "0.6.0", features = [
    "defmt",
], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7" }

# TODO: sync the dependencies
embassy-sync-stm32 = { package = "embassy-sync", version = "0.6", features = [
    "defmt",
], git = "https://github.com/embassy-rs/embassy", rev = "92326f10b5be1d6fdc6bd414eb0656e3890bd825" }


defmt = "0.3"
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7" }

hyped_core = { path = "../core" }
hyped_i2c = { path = "../io/hyped_i2c" }
hyped_gpio = { path = "../io/hyped_gpio" }
hyped_adc = { path = "../io/hyped_adc" }
hyped_spi = { path = "../io/hyped_spi" }
hyped_can = { path = "../io/hyped_can" }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f767zi",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti",
], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7" }


[dev-dependencies]
# Fix from: https://github.com/embassy-rs/embassy/pull/2727
embassy-sync = { version = "0.6.0", features = [
    "std",
], git = "https://github.com/embassy-rs/embassy", rev = "1c466b81e6af6b34b1f706318cc0870a459550b7" }
defmt = { version = "0.3", features = ["unstable-test"] }
